简历页面增加登录控制

--- a/src/main/webapp/WEB-INF/html/index.html
+++ b/src/main/webapp/WEB-INF/html/index.html
@@ -11,9 +11,9 @@
     <script src="/ssm/static/js/index.js"></script>
     <title>王金艺-首页</title>
 <body>
-<a href="/ssm/static/html/resume.html" target="_blank">查看简历</a>
+<a href="/ssm/route/resume" target="_blank">查看简历</a>
 
-<input id="login" type="button" name="popBox" value="弹出框"/>
+<input id="login" type="button" name="popBox" value="点击登录"/>
 <div id="popLayer"></div>
 <div id="popBox">
     <div class="close">
