注册功能开发

--- a/src/main/webapp/WEB-INF/html/index.html
+++ b/src/main/webapp/WEB-INF/html/index.html
@@ -13,7 +13,7 @@
 <body>
 <a href="/ssm/route/resume" target="_blank">查看简历</a>
 
-<input id="login" type="button" name="popBox" value="点击登录"/>
+<input id="login" type="button" name="popBox" value="点击登录/注册"/>
 <div id="popLayer"></div>
 <div id="popBox">
     <div class="close">
